k8s/test-api/yamls/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: zbx-service
  namespace: default
  labels:
    app: zbx
spec:
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
  selector:
    app: zbx
